--- a/.github/workflows/build-push-sign.yaml
+++ b/.github/workflows/build-push-sign.yaml
@@ -15,6 +15,16 @@ jobs:
       - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
         with:
           fetch-depth: 1
+      - name: Setup Go
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.21.x'
+      - run: go version
+      - uses: anchore/sbom-action@v0
+        with:
+          artifact-name: go-build-sbom.spdx
+      - name: Go build
+        run: go build -o app
       - name: Install Cosign
         uses: sigstore/cosign-installer@e1523de7571e31dbe865fd2e80c5c7c23ae71eb4 # v3.4.0
       - name: Set up QEMU
