--- a/.github/workflows/build-push-sign.yaml
+++ b/.github/workflows/build-push-sign.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           fetch-depth: 1
       - name: Setup Go
-      - uses: actions/setup-go@v5
+        uses: actions/setup-go@v5
         with:
           go-version: '1.21.x'
       - run: go version
