--- a/.github/workflows/build-push-sign.yaml
+++ b/.github/workflows/build-push-sign.yaml
@@ -19,10 +19,6 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.21.x'
-      - run: go version
-      - uses: anchore/sbom-action@v0
-        with:
-          artifact-name: go-build-sbom.spdx
       - name: Go build
         run: go build -o app
       - name: Install Cosign
@@ -45,6 +41,7 @@ jobs:
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671 # v4.0.0
         id: build-and-push
         with:
+          sbom: true
           platforms: linux/amd64
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
